@@ -4,6 +4,8 @@ import fr.esipe.way2go.configuration.jwt.JwtUtils;
 import fr.esipe.way2go.configuration.services.UserDetailsImpl;
 import fr.esipe.way2go.dto.auth.request.LoginRequest;
 import fr.esipe.way2go.dto.auth.response.JwtResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -11,10 +13,12 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 // Faudrait peut être delete le cross origin. Normalement, il y en a pas besoin: à tester.
 @CrossOrigin(origins = "*", maxAge = 3600)
@@ -26,6 +30,8 @@ public class AuthenticationController {
 
     private final JwtUtils jwtUtils;
 
+    Logger logger = LoggerFactory.getLogger(AuthenticationController.class);
+
     @Autowired
     AuthenticationController(AuthenticationManager authenticationManager,
                              JwtUtils jwtUtils) {
@@ -36,6 +42,10 @@ public class AuthenticationController {
     @PostMapping("/signin")
     public ResponseEntity<?> authenticateUser(@RequestBody LoginRequest loginRequest) {
 
+        PasswordEncoder passwordEncoder = PasswordEncoderFactories.createDelegatingPasswordEncoder();
+
+       logger.info(passwordEncoder.encode( loginRequest.getPassword()));
+
         Authentication authentication = authenticationManager.authenticate(
                     new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
 
@@ -45,7 +55,7 @@ public class AuthenticationController {
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(new JwtResponse(jwt,
                 userDetails.getId(),
